--- a/index.html
+++ b/index.html
@@ -1697,7 +1697,7 @@
                 <div class="file-name" id="businessFileName">No file selected</div>
             </div>
             
-            <div class="dashboard-content" id="businessDashboardContent">
+            <div class="dashboard-content active" id="businessDashboardContent">
                 <div class="page-header">
                     <div class="page-header-text">
                         <h1 class="page-title">Total Business Overview</h1>
