--- a/index.html
+++ b/index.html
@@ -1946,7 +1946,7 @@
         
         // Google Sheets URL - Replace with your published sheet URL
         // Instructions: File → Share → Publish to web → Select your sheet tab → CSV format → Copy URL here
-        const GOOGLE_SHEETS_URL = https://docs.google.com/spreadsheets/d/e/2PACX-1vQslU4CJ-5Zv1BbSrnCY1V2zpR_szf5ZPprfnZkt2ZxczFII97RLGbINskreWwnpmtchusyUqG5rL63/pub?gid=1404020107&single=true&output=csv;
+        const GOOGLE_SHEETS_URL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vQslU4CJ-5Zv1BbSrnCY1V2zpR_szf5ZPprfnZkt2ZxczFII97RLGbINskreWwnpmtchusyUqG5rL63/pub?gid=1404020107&single=true&output=csv';
         
         // Fetch with timeout helper
         function fetchWithTimeout(url, timeout = 3000) {
